work on .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
+/dtd
 /dyn
 /images
-/publications/*.pdf
-/publications/*.zip
-/publications/*.ps
-/sound
-/students
-/talks
 /protected
-/CatalinHritcuCV.pdf
 google6ae74ce46dc6a246.html
 /temp
+/usr-private
+*~
